frontend/tests/cases/positive/synInterfaceEmpty.gr
-- interface without any methods
interface Simple a
