frontend/tests/cases/negative/interfaces/parameters/tooManyInstanceParameters.gr
interface Simple a

-- too many parameters to instance
instance Simple a a
